# cpick

./: CMakeLists.txt  Makefile  README.md  build.sh  cpick.c  draw.c  draw.h  main.c  noto_sans_mono_ttf.h  quickpick.c  quickpick_icon.h  shapes.c  shapes.h  test.txt  util.c  util.h
CPickSublimeText/: CPickSublimeText.sublime-commands  README.txt  plugin.py
QuickPickSublimeText/: QuickPickSublimeText.sublime-commands  README.txt  plugin.py
font/: noto_sans_mono.h  noto_sans_mono_large.h  noto_sans_mono_medium.h  noto_sans_mono_mini.h  noto_sans_mono_small.h  regen_font.sh  used_chars.txt
